# champ

stochlite_champ/stochlite_config/scripts/: colission.py  contact_sense.py
stochlite_champ/stochlite_description/scripts/: calculate.py
stochlite_champ/stochlite_description/urdf/: stochlite.gv  stochlite.sdf  stochlite.urdf
stochlite_champ/stochlite_msgs/: CMakeLists.txt  package.xml
stochlite_champ/stochlite_msgs/msg/: contact_foot.msg  stoch_slope_esti.msg
